--- a/posts/math-simple/2023-06-26-imply.qmd
+++ b/posts/math-simple/2023-06-26-imply.qmd
@@ -103,7 +103,7 @@ lightbox: auto
 - 양화사를 $p$와 $q$의 조건이 넣어서 함축 명제의 부정을 만들어야 할까? 
 - 아니면 영화사는 별도로 처리해줘야 할까? 
 
-결국 정의의 취지가 무엇인지에 달려 있다. 극한의 정의를 보면 존재하는 세 개의 양화사가 일종의 전제 조건으로 제시되어 있다. 따라서 함축과는 별도로 다루는 것이 타당할 것이다. 양화사는 부정을 취할 때 반대로 바뀌게 된다. 즉, 엡실론-델타 논법에 따른 함수 극한 정의의 부정은 다음과 같다. 
+결국 정의의 취지가 무엇인지에 달려 있다. 극한의 정의를 보면 존재하는 세 개의 양화사가 일종의 전제 조건으로 제시되어 있다. 따라서 함축과는 별도로 다루는 것이 타당할 것이다. 양화사는 부정을 취하면 반대가 된다. 즉 엡실론-델타 논법에 따른 함수 극한 정의의 부정은 다음과 같다. 
 
 > 모든 $\delta>0$에 대해서 다음을 만족하는 어떤 $\epsilon>0$와 어떤 $x \in \mathbb R$이 존재한다; $0 < |x-a| < \delta$와 $|f(x) - L| \geq \epsilon$를 동시에 만족한다.  
 
@@ -120,20 +120,20 @@ lightbox: auto
 
 ## 진리 집합 
 
-진리 집합으로 다시 따져보도록 하자. 진리 집합은 조건제시법(set builder notation)을 통해 표현한다. 일단 한정사를 제외하고 $P$와 $Q$를 표현해보자. 
+진리 집합으로 다시 따져보도록 하자. 진리 집합은 조건제시법(set builder notation)을 통해 표현한다. 양화사를 함께 표현해보자. 
 
 $$
 \begin{aligned}
-P & = \{x|~|x - a| < \delta \} \\
-Q & = \{x|~|f(x) - L| < \epsilon \} 
+P & = \{\forall x>0,~\exists \delta>0 \, \vert ~|x - a| < \delta \} \\
+Q & = \{\forall x>0,~\forall \epsilon>0 \, \vert ~|f(x) - L| < \epsilon \} 
 \end{aligned}
 $$
 
-앞서 살펴본대로 부정형의 양화사를 적용해보자. $P$의 진리 집합에 적용되는 한정사는 $\forall \delta > 0$가 된다. $Q^C$에 적용되는 한정 명제는 $\exists \epsilon > 0$가 된다. 따라서 
+부정형의 양화사를 적용해보자. 앞서 보았듯이 양화사는 이 명제의 전제 조건이다. 따라서 명제를 부정하면 양화사는 반대로 뒤집히게 된다. 따라서 같은 $P$의 진리집합이라고 해도 원래의 명제와 부정형의 명제에는 서로 다른 영화사가 적용된다. $P$의 진리 집합에 적용되는 한정사는 $\forall \delta > 0$이고, $Q^C$에 적용되는 한정 명제는 $\exists \epsilon > 0$이다. 원 명제의 진리집합과 구별하기 위해서 아래와 같이 표기해보자. 
 $$
 \begin{aligned}
-P & = \{ x|~\forall\delta>0: |x - a| < \delta \} \\
-Q^C & = \{ x|~\exists\epsilon>0:~ |f(x) - L| \geq \epsilon \}
+\hat P & = \{ \exists x>0, ~\forall \delta>0 \, |~|x - a| < \delta \} \\
+\hat Q^C & = \{ \exists x>0, ~\exists \epsilon>0 \, | ~ |f(x) - L| \geq \epsilon \}
 \end{aligned}
 $$
 
@@ -141,9 +141,11 @@ $$
 조건제시법을 쓸 때 $|$과 $:$는 차이가 있을까? 별 차이가 없다는 게 중론인 듯 싶다. 영어로 옮기면 "such that(s.t.)"에 해당한다. 사례처럼 "s.t."이 중복되면 번갈아서 써주면 어떨까 싶다. 
 :::
 
-만일 $P \cap Q^C \neq \varnothing$이면, 정의상 함수의 극한은 존재하지 않는다. 
+만일 $\hat P \cap \hat Q^C \neq \varnothing$이면, 정의상 함수의 극한은 존재하지 않는다. 
 
-머리 속으로 그림을 그려보자. 모든 $\delta>0$에 관해서 $P \cap Q^C \neq \varnothing$이 만족하면 극한은 존재하지 않는다. 아래 그림에서 보듯이 $x$를 $a$에 아무리 가깝게 근접시키더라도 $|f(x)-L|$의 크기를 더 줄이기 힘든 어떤 한계가 존재한다면, $\lim_{x \to a} f(x)$는 존재하지 않는다. 
+머리 속으로 그림을 그려보자. 모든 $\delta>0$에 관해서 $\hat P \cap \hat Q^C \neq \varnothing$이 만족하면 극한은 존재하지 않는다. 아래 그림에서 보듯이 $x$를 $a$에 아무리 가깝게 근접시키더라도 $|f(x)-L|$의 크기를 더 줄이기 힘든 어떤 한계가 존재한다면, $\lim_{x \to a} f(x)$는 존재하지 않는다. 
+
+
 
 ## 그림으로 살펴보면
 
