--- a/posts/math-simple/2023-06-26-imply.qmd
+++ b/posts/math-simple/2023-06-26-imply.qmd
@@ -3,7 +3,7 @@ title: 조건 명제 그리고 부정
 description: $\implies$를 따져보자
 author: "JS HUHH"
 date: "06/26/2023"
-image: "images/proof.jfif"
+image: "images/cat-proof.webp"
 categories: [math-simple]
 #margin-header: subscribe.html
 draft: false
