--- a/posts/math-simple/2022-07-03-ansys-candor-theorem.qmd
+++ b/posts/math-simple/2022-07-03-ansys-candor-theorem.qmd
@@ -4,7 +4,7 @@ description: 칸토어의 정리를 증명해 보자.
 author: "JS HUHH"
 date: "07/03/2022"
 draft: false
-image: "images/proof.jfif"
+image: "images/cat-proof.webp"
 categories: [math-simple]
 filters:
    - lightbox
