--- a/posts/computer-tool/2023-05-16-workflow-with-vscode.qmd
+++ b/posts/computer-tool/2023-05-16-workflow-with-vscode.qmd
@@ -3,7 +3,7 @@ title: Quick Ready for Python in Windows
 description:  파이썬 작업환경을 빠르게 구축하기 
 author: "JS HUHH"
 date: "05/16/2023"
-image: "./images/tools.jpg"
+image: "./images/tool-cat-2.webp"
 categories: [computer-tool]
 filters:
    - lightbox
