--- a/posts/computer-tool/2023-05-29-rye.qmd
+++ b/posts/computer-tool/2023-05-29-rye.qmd
@@ -3,7 +3,7 @@ title: "Rye"
 description: 꽤 편리한 Python 가상 환경
 author: "JS HUHH"
 date: "05/29/2023"
-image: "./images/tools.jpg"
+image: "./images/tool-cat-2.webp"
 categories: [computer-tool]
 filters:
    - lightbox
