--- a/posts/computer-tool/2023-10-20-github-codespaces.qmd
+++ b/posts/computer-tool/2023-10-20-github-codespaces.qmd
@@ -23,7 +23,16 @@ format:
 ## 넋두리 
 회사에서 퍼블릭 깃헙을 쓸 때 종종 눈치가 보인다. 우선 아예 쓰지 못하게 하는 회사가 있다. 막지는 않는다고 해도 깃헙을 활용하는 개인 작업에 회사 컴퓨터 쓰는 일이 그리 적절해 보이지 않는다. 그렇다고 (솔직히) 회사에서 개인 작업을 아예 안 할 수는 없다. 만일 온라인 도구만으로 필요한 작업을 다 할 수 있다면 어떨까? 
 
-깃헙이 이미 이런 기능을 제공하고 있다. 깃헙 코드스페이시스(깃헙 코스)는 웹에서 개발과 컴퓨팅 환경을 상당한 수준으로 제공하는 서비스다. 노트북 환경에 제한된 구글 코랩과 달리 깃헙 코스는 온전한 우분투의 컴퓨팅 환경을 제공한다. 클라우드에 별도의 환경을 세팅하지 않는 이상 깃헙 코스를 능가하는 유연하고 편리한 컴퓨팅 환경을 얻기는 쉽지 않을 것이다.  
+깃헙이 이미 이런 기능을 제공하고 있다. 깃헙 코드스페이시스(깃헙 코스)는 웹을 통해 개발과 컴퓨팅 환경을 상당한 수준에서 제공하는 서비스다. 
+
+노트북 환경에 한정된 구글 코랩과 달리 깃헙 코스는 온전한 우분투의 컴퓨팅 환경을 제공한다. 클라우드에 별도의 환경을 세팅하지 않는 이상 깃헙 코스를 능가하는 유연하고 편리한 컴퓨팅 환경을 얻기는 쉽지 않을 것이다. 
+
+깃헙 코스는 리포의 브랜치에 따라서 서로 다른 코스를 붙일 수 있다. 비슷한 개발 환경을 미묘하게 바꿔야 할 필요가 있다면 유용한 기능이 될 것이다. 아울러 유료 사용자라면 머신의 유형을 쉽게 바꿀 수 있다. 
+
+:::{.column-margin}
+자세한 것은 [링크](
+https://docs.github.com/en/codespaces/customizing-your-codespace/changing-the-machine-type-for-your-codespace)를 참고하자. 
+:::
 
 ## 깃헙 코스 활성화
 
@@ -31,13 +40,7 @@ format:
 
 ![](https://docs.github.com/assets/cb-50007/mw-1440/images/help/codespaces/who-will-pay.webp){width=50%}
 
-그림처럼 깃헙 페이지의 오른쪽 상단에 `Code` 버튼이 생기는데, 이 버튼을 누르면 `Open with Codespaces` 메뉴가 나타난다. 이 메뉴를 선택하면 깃헙 코스가 활성화된다.
-
-:::{.column-margin}
-깃헙 코스의 장점은 리포의 브랜치에 따라서 서로 다른 코스를 붙일 수 있다는 것이다. 비슷한 개발 환경을 미묘하게 바꿔야 할 필요가 있다면 유용한 기능이 될 것이다. 
-:::
-
-활성화된 이후에는 VS Code와 동일한 환경이 제공된다. 별도로 구구절절하게 설명할 것이 없다는 이야기다. 자세한 것은 아래 페이지를 참고하면 된다. 
+그림처럼 깃헙 페이지의 오른쪽 상단에 `Code`을 누르면 `Open with Codespaces` 메뉴가 나타난다. 이 메뉴를 선택하면 깃헙 코스가 활성화된다. 활성화된 이후에는 VS Code와 동일한 환경이 제공된다. 별도로 구구절절하게 설명할 것이 없다는 이야기다. 자세한 것은 아래 페이지를 참고하면 된다. 
 
 <https://docs.github.com/ko/codespaces/overview>
 
