--- a/posts/computer-tool/2020-10-24-classy-latex.qmd
+++ b/posts/computer-tool/2020-10-24-classy-latex.qmd
@@ -3,7 +3,7 @@ title:  $\rm\LaTeX$ in Modern Ways
 description: $\rm\LaTeX$을 다시 써볼까?
 author: "JS HUHH"
 date: "10/24/2020"
-image: "images/type_cat.jfif"
+image: "./images/cat-tex.webp"
 categories: [computer-tool]
 #margin-header: subscribe.html
 ---
