--- a/posts/computer-tool/2023-10-20-github-codespaces.qmd
+++ b/posts/computer-tool/2023-10-20-github-codespaces.qmd
@@ -38,7 +38,7 @@ https://docs.github.com/en/codespaces/customizing-your-codespace/changing-the-ma
 
 그림처럼 깃헙 페이지의 오른쪽 상단에 `Code`을 누르면 `Open with Codespaces` 메뉴가 나타난다. 이 메뉴를 선택하면 깃헙 코스가 활성화된다. 활성화된 이후에는 VS Code와 동일한 환경이 제공된다. 별도로 구구절절하게 설명할 것이 없다는 이야기다. 자세한 것은 아래 페이지를 참고하면 된다. 
 
-<https://docs.github.com/ko/codespaces/overview>
+![[LINK](https://docs.github.com/ko/codespaces/overview)를 참고하자.](https://nira.com/wp-content/uploads/2021/11/image2-3-1336x848.png)
 
 ## 나의 활용법 
 
