--- a/posts/computer-tool/2023-10-20-github-codespaces.qmd
+++ b/posts/computer-tool/2023-10-20-github-codespaces.qmd
@@ -18,7 +18,7 @@ format:
 ---
 
 ## TL; DR
-코드 스페이스는 거의 완벽한 가상 코딩 환경이다. 
+코드 스페이스는 편리하고 저렴하게 활용할 수 있는 거의 완벽한 코딩 환경이다. 
 
 ## 넋두리 
 회사에서 퍼블릭 깃헙을 쓸 때 종종 눈치가 보인다. 우선 아예 쓰지 못하게 하는 회사가 있다. 막지는 않는다고 해도 깃헙을 활용하는 개인 작업에 회사 컴퓨터 쓰는 일이 그리 적절해 보이지 않는다. 그렇다고 (솔직히) 회사에서 개인 작업을 아예 안 할 수는 없다. 만일 온라인 도구만으로 필요한 작업을 다 할 수 있다면 어떨까? 
