--- a/posts/the-books/2023-03-13-스케일의-법칙.qmd
+++ b/posts/the-books/2023-03-13-스케일의-법칙.qmd
@@ -1,74 +1,63 @@
 ---
-title: 스케일의 법칙
-description: 그냥 또 하나의 경제학책? 
+title: 마약 하는 마음, 마약 파는 사회
+description: 재미는 있지만, 좀 장황하다
 author: "JS HUHH"
-date: "03/13/2023"
+date: "10/27/2023"
 image: "./images/book-cat-2.webp"
-categories: [the-books, economics]
+categories: [the-books]
 filters:
    - lightbox
 lightbox: auto
 draft: false
 ---
-::: {layout="[[35,-5, 60]]"}
+::: {layout="[[20,-1, 50]]"}
 ## The Book
-[![](https://image.aladin.co.kr/product/30562/27/cover500/8901266431_1.jpg)](https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=305622732)
+[![](https://image.aladin.co.kr/product/32626/17/cover500/e432532385_1.jpg)](https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=326261783)
 
 ::::{layout-ncol=1}
 ## TL; DR
-- 경제학 혹은 행동 경제학의 기본적인 개념을 응용하기에는 좋다. 
-- 저자의 우버에서의 경험이 '날 것'으로 들어가 있지는 않더라. 
-
-### Not in this Post 
-- 책 내용을 시시콜콜 소개하지 않는다. 
-
-### What in this Post 
-- 내키는 대로 쓴 책에 대한 느낌적 느낌 
+- 마약의 이모저모를 잘 알려주긴 한다. 
+- 의사로서의 전문 지식은 책의 장점이지만, 마약의 모든 것을 포괄하려는 욕심은 과했다. 
 ::::
 :::
 
 
+## 마약의 모든 것?
 
-## 학술을 다루는 책의 어떤 흐름 
+책은 "1부 마약하는 사람", "2부 마약 파는 사회"로 구성되어 있다. 1부가 마약 자체의 분류, 효과 그리고 마약하는 개별자에 대해서 다루고, 2부는 마약의 정치경제학(?), 역사 등을 다루고 있다. 
 
-학술 분야의 대중서가 지니는 뚜렷한 특징이 하나 있다. 최근 들어 등장하는 많은 학술 대중서를 보면, 일가를 이룬 연구자가 자신의 연구를 책에 집대성하면서 동시에 절반쯤 자서전을 겸하는 경우가 많다. 책의 중간중간 등장하는 개인사가 중요한 학술적인 성취를 엿보는 창이 되기도 한다. 이런 말랑말랑한 학술서가 딱딱한 교과서 혹은 본격 학술서에 비해 재미 있고 접근성도 좋다. 이런 포맷의 '시초'라고 할 만한 "괴짜 경제학"의 엄청난 성공 때문일까도 싶다. 
+1부는 의학자로서 저자의 전문 지식이 돋보이는 부분이 있다. 마약의 분류, 작용 기제 등에 대한 설명을 다른 대중서들보다 명쾌하다. 2부는 이래저래 세미나를 발췌해서 쓴 느낌이 강하다. 마약 왕국을 다루는 분은 넷플릭스 시리즈 "나르코스" 그리고 "돕식"(디즈니+), "페인킬러"(디즈니+) 등을 한 번 보는 게 낫다. 한국 마약의 역사에 관해서는 저자가 참고한 서적을 직접 보는 게 나을 것 같다. 물론 이런 레퍼런스들을 소개해준다는 의미에서 고마움을 전할 수는 있겠다. 
 
-그런데 나는 이런 형식이 이제 그리 좋게 보이지 않는다. 이런 책이 읽을 때는 재미있지만, 읽고 나면 기억에 남는 것이 별로 없다. 교과서나 솔직한 학술서를 읽으면 주요 개념 한두 개쯤은 챙겨갈 수 있는데, 이런 책은 도통 '재미있더라'는 인상 빼고는 챙길 게 없더라. 
+내용을 다루다가 간혹 저자가 너무 심취하는 경향이 있다. 나 이런 거 상당히 거슬리더라. 취향이니 이 대목 또한 넘어가자. 
 
-## 존 리스트의 "볼티지 효과"
-
-존 리스트의 "스케일의 법칙"도 이러한 흐름에 속하는 책이다. 저자는 상아탑 경제학자로서는 드물게 기업의 현장 그것도 떠오르는 스타트업에 뛰어들어 '규모의 경제'를 설계하는 일에 참여했다. 리스트 교수는 최근 노벨 경제학상 후보의 앞자리에 항상 오를 만큼 경제학계의 업적도 탄탄한 인물이다. 
-
-나는 우버와 리프트에서 겪은 사업의 경험을 보다 내밀하게 "규모의 경제" 혹은 "네트워크 효과"와 연결하는 내용을 기대했다. 규모의 경제를 다루는 많은 책이 있지만, 본질을 솔직하게 제대로 치고 나가는 책이 생각보다 드물다. Varian & Shapiro가 20년 전에 썼던 책이 여전히 메력이라고 생각하기에 보다 갱신된 내용이 경제학적으로 잘 다뤄졌으면 싶었다. 
-
-:::{.column-margin}
-[Information Rules](https://www.amazon.com/Information-Rules-Strategic-Network-Economy/dp/087584863X/); 이 책은 번역 출간되었으나, 현재는 절판 상태이다. 
-:::
-
-## 기대와는 달랐다... 
-
-이 책은 관련된 경제학을 꼼꼼히 다루는 대신 자기계발서와 비슷한 형태를 취하고 있다. 이론 혹은 실험 결과를 상세하기 소개하기보다는 그 논리와 결과를 밑밥으로 깔면서 비즈니스 혹은 삶의 교훈을 끌어내는 식이다. 
-
-1부에서는 규모의 확장을 가로막는 5가지 장애물을 소개한다. 행동 경제학, 실험 경제학, 인과 추론, 재현성의 위기 등의 학술 논쟁에서 다뤄진 내용이 적당히 버무려져서 소개된다. 2부는 규모 확장을 위해 필요한 경제학의 도구를 소개한다. 인센티브, 한계적 사고(marginal thinking), 기회비용(opportunity cost)에 기반한 포기 시점의 판단, 문화의 중요성을 다루고 있다.
-
-나는 2부가 더 실망스러웠다. 우선 리스트 교수의 가르침이라는 게 '경제학 101'의 내용과 크게 다르지 않다. 태양 아래 새로운 것이 없다면 좋은 가르침을 여러 영역에서 확인할 수 있다면, 그것으로 충분할지 모르겠다. 새롭다고 인지되는 현상을 먼저 잘 포획하고 이를 기존 경제학의 가르침으로 끌고 오는 방식이면 어땠을까 싶다. 저자가 이런 접근을 취하고 있지는 않더라. 
-
-저자의 개인사와 관련된 에피소드 역시 경제학을 전공하는 사람이라면 모를까 일반인이 크게 관심을 가질 만한 내용일까 싶다. 우버의 부상 및 추락과 관련해서 흥미로운 대목이 더 있었을 듯 싶다. 저자가 경험한 회사 생활이 그 정도였기 때문인지 아니면 감추려고 그랬던 것인지는 알 수 없지만, '좋은 게 좋은 것'이라는 식으로 넘어가는 경우가 많더라. 
-
-## 최후의 일언
-
-일반적인 경제학의 가르침이 규모 확장(scalability)에도 핵심이라면 굳이 '규모'(볼티지)라는 대목을 강조할 필요가 있었을까? 이 책에 던지는 나의 근본 질문 혹은 회의이다. 
-
-## 부록 
-
-[Reminders by the Content](https://www.lostineconomics.com/posts/the-books/2023-03-13-%EC%8A%A4%EC%BC%80%EC%9D%BC%EC%9D%98-%EB%B2%95%EC%B9%99-sub-1.html)
+## 챙길 것 
 
 
+### 신경전달물질
+
+마약은 신경전달물질을 통해서 작용한다. 신경전달물질이 스탭스의 수용체에 달라붙어 효과를 낸다. 저자가 제시한 핵심 신경전달물질을 살펴보자. 
+
+- 아세틸콜린: 가장 기본적인 물질이다. 전화벨과 같다고 한다. 뭘 해야 하는지 알려주는 신호 역할을 한다는 의미로 이해하면 될까? "이 아세틸콜린이 줄어들면 뇌의 모든 기능, 그 중에서도 지식과 정보를 받아들여 저장하고 판단하는 인지 기능에 이상이 생긴다. 바로 알츠하이머 치매다."
+
+- 노르에피네프린: "시계의 알람처럼 긴장과 흥분을 일으켜 혈압을 상승시키기 떄문에 출혈 등으로 혈압이 떨어진 쇼크 환자에게 치료제로 쓴다."
+
+- 도파민: "클럽 DJ가 들려주는 음악같이 운동기능과 함께 즐거움과 쾌락을 준다. 이 도파민을 분비하는 신경세포에 이상에 생기면 운동기능 이상으로 몸을 떨거나 강직이 온다. 바로 파킨슨 병이다."
+
+- 세로토닌: "절의 목탁 소리처럼 평온함과 행복감을 주는데 이것이 부족하면 우울증이 생긴다."
+
+- 엔도르핀: "우리 몸에는 몸이 만든 모르핀(endogenous morphine), 즉 엔도르핀이 극소량이지만 존재한다. 이 엔도르핀은 평소에는 전혀 분비되지 않다가 극한의 상황에서만 분비되기에 어지간히 아프거나 다쳐서는 나오지 않는다." 
 
 
+### 마약 분류 
 
+![](./images/drugmap.png)
 
+정말 잘 분류해 놓은 표다! 일단 코카인, 암페타민 계열의 약과 마리화나, 모르핀 계열의 약이 업과 다운 계열임이 잘 식별된다. 모르핀에서 파생되는 헤로인, 펜타닐 등은 다운 계열에 속한다. 저자는 책에서 이미지 만으로 다운계열의 약이 '안전'할 것이라는 짐작은 틀렸다고 말한다. 대마에 대해서 흔히 그런 이야기들을 하곤 한다. 하지만 업계열의 약들이 지속시간이 짧아서 복용과 복용 사이의 필연적인 텀이 존재하는 데 반해서 다운 계열의 약은 그런 텀을 느끼지 쉽지 않다. 중독에 빠져들기는 오히려 다운 계열이 쉬울 수 있다는 뜻이다. 
 
+마약성 진통제 위기(opioid crisis)에서 옥시콘틴 같은 약에 사람들이 쉽게 빠져든 이유를 여기서 짐작할 수 있다. 약을 먹어서 효과가 좋으니 쉽게 더 복용하게 되는데, 이 효과의 주기성을 다운 계열의 약에서는 느끼기 힘들게 된다.  
 
+## 흥미로운 대목들
 
+- 대부분의 마약은 자연에서 발견된 것을 제외하면 제약사를 통해 발견되었다. 코카인은 원래 '국소 마취제'로 개발된 것이고 '모르핀'도 전쟁 부상병의 고통을 덜기 위한 목적으로 아편에서 강화 추출된 것이다. 코카인은 1885년 머크사가, 모르핀은 1898년 바이어사가 개발해서 판매했다. 독일의 페르비틴, 일본의 필로폰 그리고 영국의 벤제드린은 모두 2차 대전 중인 국가들이 전후방의 전투력을 높일 목적으로 활용되었다. 
 
+- 북한산 필로폰이 높은 순도를 자랑한다는 점을 처음 알았다. 국가에서 정책적(?)으로 제조해서 그렇다고 한다. 북한에서 "빙두"(여기서 두는 독의 한자 발음이다)라고 부르는 이 마약이 탈북자의 네트워크를 통해서 남한으로 전해지지 않았을까 상상해 보았다. 이에 관한 연구가 있는지는 아직 찾아보지 못했다. 
