--- a/posts/the-books/2023-03-13-스케일의-법칙.qmd
+++ b/posts/the-books/2023-03-13-스케일의-법칙.qmd
@@ -22,7 +22,7 @@ draft: false
 :::
 
 
-## 마약의 모든 것?
+## 넋두리
 
 책은 "1부 마약하는 사람", "2부 마약 파는 사회"로 구성되어 있다. 1부가 마약 자체의 분류, 효과 그리고 마약하는 개별자에 대해서 다루고, 2부는 마약의 정치경제학(?), 역사 등을 다루고 있다. 
 
@@ -30,22 +30,22 @@ draft: false
 
 내용을 다루다가 간혹 저자가 너무 심취하는 경향이 있다. 나 이런 거 상당히 거슬리더라. 취향이니 이 대목 또한 넘어가자. 
 
-## 챙길 것 
+## 챙길 대목들
 
 
 ### 신경전달물질
 
 마약은 신경전달물질을 통해서 작용한다. 신경전달물질이 스탭스의 수용체에 달라붙어 효과를 낸다. 저자가 제시한 핵심 신경전달물질을 살펴보자. 
 
-- 아세틸콜린: 가장 기본적인 물질이다. 전화벨과 같다고 한다. 뭘 해야 하는지 알려주는 신호 역할을 한다는 의미로 이해하면 될까? "이 아세틸콜린이 줄어들면 뇌의 모든 기능, 그 중에서도 지식과 정보를 받아들여 저장하고 판단하는 인지 기능에 이상이 생긴다. 바로 알츠하이머 치매다."
+- **아세틸콜린**: 가장 기본적인 물질이다. 전화벨과 같다고 한다. 뭘 해야 하는지 알려주는 신호 역할을 한다는 의미로 이해하면 될까? "이 아세틸콜린이 줄어들면 뇌의 모든 기능, 그 중에서도 지식과 정보를 받아들여 저장하고 판단하는 인지 기능에 이상이 생긴다. 바로 알츠하이머 치매다."
 
-- 노르에피네프린: "시계의 알람처럼 긴장과 흥분을 일으켜 혈압을 상승시키기 떄문에 출혈 등으로 혈압이 떨어진 쇼크 환자에게 치료제로 쓴다."
+- **노르에피네프린**: "시계의 알람처럼 긴장과 흥분을 일으켜 혈압을 상승시키기 떄문에 출혈 등으로 혈압이 떨어진 쇼크 환자에게 치료제로 쓴다."
 
-- 도파민: "클럽 DJ가 들려주는 음악같이 운동기능과 함께 즐거움과 쾌락을 준다. 이 도파민을 분비하는 신경세포에 이상에 생기면 운동기능 이상으로 몸을 떨거나 강직이 온다. 바로 파킨슨 병이다."
+- **도파민**: "클럽 DJ가 들려주는 음악같이 운동기능과 함께 즐거움과 쾌락을 준다. 이 도파민을 분비하는 신경세포에 이상에 생기면 운동기능 이상으로 몸을 떨거나 강직이 온다. 바로 파킨슨 병이다."
 
-- 세로토닌: "절의 목탁 소리처럼 평온함과 행복감을 주는데 이것이 부족하면 우울증이 생긴다."
+- **세로토닌**: "절의 목탁 소리처럼 평온함과 행복감을 주는데 이것이 부족하면 우울증이 생긴다."
 
-- 엔도르핀: "우리 몸에는 몸이 만든 모르핀(endogenous morphine), 즉 엔도르핀이 극소량이지만 존재한다. 이 엔도르핀은 평소에는 전혀 분비되지 않다가 극한의 상황에서만 분비되기에 어지간히 아프거나 다쳐서는 나오지 않는다." 
+- **엔도르핀**: "우리 몸에는 몸이 만든 모르핀(endogenous morphine), 즉 엔도르핀이 극소량이지만 존재한다. 이 엔도르핀은 평소에는 전혀 분비되지 않다가 극한의 상황에서만 분비되기에 어지간히 아프거나 다쳐서는 나오지 않는다." 
 
 
 ### 마약 분류 
