--- a/posts/the-books/2023-03-13-스케일의-법칙.qmd
+++ b/posts/the-books/2023-03-13-스케일의-법칙.qmd
@@ -31,8 +31,6 @@ draft: false
 다만 내용을 다루다가 저자가 너무 심취하는 순간이 종종 발견된다. 이런 게 나는 상당히 거슬리더라. 이또한 취향이니 그냥 넘어가자. 
 
 ## 챙길 대목들
-
-
 ### 신경전달물질
 
 마약은 신경전달물질을 통해서 작용한다. 신경전달물질이 스탭스의 수용체에 달라붙어 효과를 낸다. 저자가 제시한 핵심 신경전달물질을 살펴보자. 
@@ -52,9 +50,11 @@ draft: false
 
 ![](./images/drugmap.png)
 
-정말 잘 분류해 놓은 표다! 일단 코카인, 암페타민 계열의 약과 마리화나, 모르핀 계열의 약이 업과 다운 계열임이 잘 식별된다. 모르핀에서 파생되는 헤로인, 펜타닐 등은 다운 계열에 속한다. 저자는 책에서 이미지 만으로 다운계열의 약이 '안전'할 것이라는 짐작은 틀렸다고 말한다. 대마에 대해서 흔히 그런 이야기들을 하곤 한다. 하지만 업계열의 약들이 지속시간이 짧아서 복용과 복용 사이의 필연적인 텀이 존재하는 데 반해서 다운 계열의 약은 그런 텀을 느끼지 쉽지 않다. 중독에 빠져들기는 오히려 다운 계열이 쉬울 수 있다는 뜻이다. 
+정말 잘 분류해 놓은 그림이다! 코카인/암페타민 계열의 약과 마리화나/모르핀 계열의 약은 각각 업과 다운 계열이다. 그리고 모르핀에서 파생되는 헤로인, 마약성 진통제, 펜타닐 등이 다운 계열에 속한다. 
 
-마약성 진통제 위기(opioid crisis)에서 옥시콘틴 같은 약에 사람들이 쉽게 빠져든 이유를 여기서 짐작할 수 있다. 약을 먹어서 효과가 좋으니 쉽게 더 복용하게 되는데, 이 효과의 주기성을 다운 계열의 약에서는 느끼기 힘들게 된다.  
+저자는 책에서 다운 계열의 약이 막연히 '안전'할 것이라는 짐작은 위험하다고 말한다. 대마에 대해서 이런 이야기를 하고는 한다. 자극이 세지 않아서 중독될 가능성이 낮다고. 
+
+저자에 따르면 오히려 반대가 진실에 가까울 수 있다. 업 계열의 약들이 에너지 소모가 많다. 따라서 효과의 지속시간이 짧다. 업 계열 약에는 복용과 복용 사이의 필연적인 텀이 존재한다. 이에 반해 다운 계열의 약은 그런 주기가 없다. 미끄러지듯이 중독에 빠져들기에는 다운 계열이 보다 쉬울 수 있다는 뜻이다. 마약성 진통제 위기(opioid crisis)에서 옥시콘틴 같은 약에 사람들이 쉽게 빠져든 이유를 여기서 짐작할 수 있다.  
 
 ## 흥미로운 대목들
 
