--- a/posts/the-books/2023-10-27-마약하는-마음-양성관.qmd
+++ b/posts/the-books/2023-10-27-마약하는-마음-양성관.qmd
@@ -14,7 +14,7 @@ draft: false
 ## The Book
 [![](https://image.aladin.co.kr/product/32626/17/cover500/e432532385_1.jpg)](https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=326261783)
 
-::::{layout-ncol=1}
+::::{layout="[1]"}
 ## TL; DR
 - 마약의 이모저모를 잘 알려주긴 한다. 
 - 의사로서의 전문 지식은 책의 장점이지만, 마약의 모든 것을 포괄하려는 욕심은 과했다. 
@@ -58,6 +58,6 @@ draft: false
 
 ## 흥미로운 대목들
 
-- 대부분의 마약은 자연에서 발견된 것을 제외하면 제약사를 통해 발견되었다. 코카인은 원래 '국소 마취제'로 개발된 것이고 '모르핀'도 전쟁 부상병의 고통을 덜기 위한 목적으로 아편에서 강화 추출된 것이다. 코카인은 1885년 머크사가, 모르핀은 1898년 바이어사가 개발해서 판매했다. 독일의 페르비틴, 일본의 필로폰 그리고 영국의 벤제드린은 모두 2차 대전 중인 국가들이 전후방의 전투력을 높일 목적으로 활용되었다. 
+- 자연에서 발견된 것을 제외하면 대부분의 미약은 제약사를 통해 개발되었다. 코카인은 원래 '국소 마취제'로 1885년 머크사가, '모르핀'은 전쟁 부상병의 고통을 덜기 위한 목적으로 1898년 바이어사가 개발햇다. 독일의 페르비틴, 일본의 필로폰 그리고 영국의 벤제드린은 모두 2차 대전 중인 국가들이 전후방의 전투력을 높일 목적으로 활용되었다. 
 
 - 북한산 필로폰이 높은 순도를 자랑한다는 점을 처음 알았다. 국가에서 정책적(?)으로 제조해서 그렇다고 한다. 북한에서 "빙두"(여기서 두는 독의 한자 발음이다)라고 부르는 이 마약이 탈북자의 네트워크를 통해서 남한으로 전해지지 않았을까 상상해 보았다. 이에 관한 연구가 있는지는 아직 찾아보지 못했다. 
