--- a/posts/the-books/2023-03-13-voltage-effect-list.qmd
+++ b/posts/the-books/2023-03-13-voltage-effect-list.qmd
@@ -4,23 +4,28 @@ description: 그냥 또 하나의 경제학책?
 author: "JS HUHH"
 date: "03/13/2023"
 image: "./images/book-cat-2.webp"
-categories: [the-books, economics]
-filters:
-   - lightbox
-lightbox: auto
+categories: [the-books]
+#fig-align: center
+#jupyter: python3
 draft: false
+format:
+  html:
+    code-line-numbers: true
+    highlight-style: arrow
 ---
-::: {layout="[[20,-1, 50]]"}
+
+::: columns
+::: {.column width="30%"}
 ## The Book
 [![](https://image.aladin.co.kr/product/30562/27/cover500/8901266431_1.jpg)](https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=305622732)
+:::
 
-::::{layout="[1]"}
+::: {.column width="70%"}
 ## TL; DR
 - 경제학 혹은 행동 경제학의 기본적인 개념을 응용하기에는 좋다. 
 - 저자의 우버에서의 경험이 '날 것'으로 들어가 있지는 않더라. 
-::::
 :::
-
+:::
 
 ## 학술을 다루는 책의 어떤 흐름 
 
@@ -54,7 +59,7 @@ draft: false
 
 ## 부록 
 
-[Reminders by the Content](https://www.lostineconomics.com/posts/the-books/2023-03-13-%EC%8A%A4%EC%BC%80%EC%9D%BC%EC%9D%98-%EB%B2%95%EC%B9%99-sub-1.html)
+[Reminders by the Content](https://www.lostineconomics.com/ posts/the-books/2023-03-13-voltage-effect-list-2.html)
 
 
 
