--- a/posts/computer-tool/2023-10-20-github-codespaces.qmd
+++ b/posts/computer-tool/2023-10-20-github-codespaces.qmd
@@ -88,7 +88,7 @@ brew를 이용해서 pixi를 설치하자.
 이 pixi를 통해 설치된 파이썬 환경은 깃헙 코스에서 실행되는 파이썬 명령의 가상 환경으로 기능한다. VS Code에서 가상 환경을 설정하는 방법은 
 
 :::{.callout-tip title="파이썬 실행 환경 설정"}
-F1 > "Python: 파이썬 인터프리터 선택"
+F1 > "Python: 인터프리터 선택"
 :::
 
 그리고 `.pixi/env/bin/python`을 선택하면 된다. 파이썬 인터프리터가 선택되면 자연스럽게 가상 환경으로 지정된다. 
