--- a/posts/walk-through/2023-11-03-definitive-guide-to-windows.qmd
+++ b/posts/walk-through/2023-11-03-definitive-guide-to-windows.qmd
@@ -11,7 +11,7 @@ filters:
    #- line-highlight
 lightbox: auto
 #jupyter: python3
-draft: true
+draft: false
 format:
   html:
     code-line-numbers: true
@@ -60,7 +60,7 @@ https://winget.run/
 
 ### 설치 
 
-아래 명령어를 통해서 WSL 기능을 활성화하고 Ubuntu 배포판을 설치할 수 있다. 
+아래 명령어를 통해서 WSL 기능을 활성화하고 Ubuntu 배포판까지 한 방에 설치할 수 있다. 
 
 ```shell
 > wsl --install
@@ -70,62 +70,17 @@ https://winget.run/
 
 https://learn.microsoft.com/en-us/windows/wsl/install
 
-## Ubuntu 관리 
-
-### 리포지토리 주소 변경 
-
-기본 리포지토리 주소를 바꾸도록 하자. 만일 WSL을 통해 설치했다면 우분투 메인 서버로 설정되어 있을 것이다. apt 패키지 업데이트를 위한 주소는 `/etc/apt/sources.list` 파일을 편집하면 된다. 
-
-```bash
-> sudo nano /etc/apt/sources.list
+```shell
+>  wsl --list --online # or wsl -l -o 설치 가능한 배포판 조회 
+> wsl --install -d <Distribution Name> # 특정 배포판 설치 
 ```
 
-기본 저장소보다는 카카오의 미러 저장소가 국내에서 빠르다. 해당 파일을 적당한 편집기로 열어 기본 패키지 저장소가 어떻게 되어 있는지 살펴보자. 파일 내의 모든 저장소 URL을 찾아 `http://archive.ubuntu.com/ubuntu/` 또는 `http://kr.archive.ubuntu.com/ubuntu/` 등의 주소를 `http://mirror.kakao.com/ubuntu/`로 변경하면 된다. 둘 중 뭘로 되어 있는지 모르니 확인 후 작업하는 것을 권한다. nano 앱에서 `crtl-w > crtl-r`로 찾아서 바꾸자.  
+## Ubuntu 관리 및 앱 설치 
 
-### zsh 설치 
+아래 링크를 참고하자. 
 
-```bash
-> sudo apt update # 이미 실행했다면 건너 뛰자 
-> sudo apt install zsh # zsh 설치
-> chsh -s $(which zsh) # zsh을 기본 셸로 설정
+[LINK](../computer-tool/2023-11-03-first-thing-ubuntu.html)
 
-# 로그아웃 후에 다시 로그인하면 zsh이 기본셸로 설정된다. 
-> sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)" # oh my zsh을 설치하자. 
-```
 
-### p10k 깔기 
-
-```bash
-> git clone --depth=1 https://github.com/romkatv/powerlevel10k.git ${ZSH_CUSTOM:-$HOME/.oh-my-zsh/custom}/themes/powerlevel10k
-```
-
-셸 꾸미기로 속 편하게 파워레벨10k를 쓰자. 
-
-```bash
-> nano ~/.zshrc # zsh 설정 열기 
-# ZSH_THEME="robbyrussell" -> ZSH_THEME="powerlevel10k/powerlevel10k" # 테마를 p10k로 바꾸자 
-```
-
-변경 후 셸을 다시 시작하면 p10k 설정화면이 뜬다. 취향대로 설정하도록 하자. 설정을 바꾸고 싶다면, `p10k configure`를 실행하거나 `~/.p10k.zsh`를 직접 수정해도 좋다. 
-
-### brew 설치 
-
-우분투에서 필요한 앱을 까는 방법은 apt, snap 그리고 brew가 있다. OS 단위의 업데이트 혹은 OS와 프로세스과 깊게 연관된 앱들은 apt를 통해서 깔자. snap도 나쁘지는 않지만 거추장스런 면이 있다. user 레벨에서 필요한 앱들을 깔고 관리하기에는 brew가 편하다. macos 만큼 편하지는 않지만 리눅스에서도 쓸만하다. 
-
-<https://brew.sh/>
-
-웹 페이지의 소개된 방식대로 설치하자. 설치 후에는 화면에 뜬 메시지대로 사후 작업을 꼭 해줘야 한다. 그래야 brew 명령어를 제대로 실행할 수 있다. 사용하는 셸에 따라서 서로 다른 사후 실행 명령이 등장하니 유의하시라. 
-
-### gh, pixi with brew 
-
-이제 brew를 통해서 필요한 앱들을 깔겠다. 필요한 앱을 알아서 깔면 된다. brew를 통해서 설치할 수 있는지 여부는 brew 홈페이지에서 검색으로 확인할 수 있다. 나는 깃헙을 활용하기 위한 gh와 파이썬 의존성 관리도구인 pixi를 가장 먼저 설치했다. 
-
-```bash
-> brew install gh, pixi 
-```
-
-gh를 설치한 후 `gh auth login`을 통해 깃헙 계정에 로그인을 해두자. 필요한 리포가 있을 경우 `gh repo clone {리포-주소}`를 통해 편하게 당겨올 수 있다. 
-
-## Linux 앱 
 
 
