--- a/posts/walk-through/2023-11-03-definitive-guide-to-windows.qmd
+++ b/posts/walk-through/2023-11-03-definitive-guide-to-windows.qmd
@@ -19,7 +19,7 @@ format:
 ---
 
 ## TL; DR
-윈도우 작업 환경을 만드는 방법을 기록한다. 내용은 조금씩 변해갈 것이다.  
+윈도우 작업 환경을 만드는 방법을 기록한다. 내용은 변화에 따라서 조금씩 변해갈 것이다.  
 
 ## 넋두리 
 앞서 윈도에 관한 여러 포스트를 게재했다. 그런데 그 내용 중에서 이제는 쓰지 않는 것도 있다. 이 글은 '현재'를 바라보면서 윈도에서 어떤 작업환경을 유지하고 있는지를 기록하는 내용이다. 
