--- a/posts/walk-through/2023-11-03-definitive-guide-to-windows.qmd
+++ b/posts/walk-through/2023-11-03-definitive-guide-to-windows.qmd
@@ -26,7 +26,7 @@ format:
 
 ## 앱 설치 관리자 
 
-<https://apps.microsoft.com/detail/9NBLGGH4NNS1?hl=ko-kr&gl=KR>
+🔗 [윈도 스토어 앱설치 관리자](https://apps.microsoft.com/detail/9NBLGGH4NNS1?hl=ko-kr&gl=KR)
 
 winget으로 소프트웨어를 설치하고 관리하려면 "마이크로소프트 스토어"에서 앱설치 관리자를 설치하자. 꼭 winget을 깔아야 하는 것은 아니지만, 터미널에서 일관되게 관리할 수 있어서 꽤 편리하다. 
 
@@ -80,7 +80,7 @@ https://learn.microsoft.com/en-us/windows/wsl/install
 
 아래 링크를 참고하자. 
 
-🔗[LINK](../computer-tool/2023-11-03-first-thing-ubuntu.html)
+🔗 [Ubuntu를 깔고 먼저 해야 할 일들](../computer-tool/2023-11-03-first-thing-ubuntu.html)
 
 
 
