--- a/posts/walk-through/2023-11-03-definitive-guide-to-windows.qmd
+++ b/posts/walk-through/2023-11-03-definitive-guide-to-windows.qmd
@@ -45,7 +45,7 @@ winget으로 설치할 수 있는 소프트웨어 확인은 아래 웹 사이트
 
 터미널 앱은 당연히 윈도 터미널을 써야 한다. 다른 OS의 터미널 앱과 비교해도 이 만큼 편리하고 다재다능한 앱이 없다. 최근 윈도11 버전에는 기본으로 탑재가 되어 있다. 몇 가지 팁만 짚고 넘어가자. 
 
-- Font는 Hack Nerd Font를 쓰자. 여기서 다운받자. 
+- Font는 Hack Nerd Font를 쓰자. [여기서](https://www.nerdfonts.com/font-downloads) 다운받자. 
 - 최근 버전에서는 `json`을 고치지 않고도 설정을 쉽게 바꿀 수 있다. 여기서 테마, 폰트 등을 바꾸면 된다. 
 - 셸 전체 설정과 개별 셸 설정 모두 가능하다. 
 
