--- a/posts/walk-through/2023-11-03-definitive-guide-to-windows.qmd
+++ b/posts/walk-through/2023-11-03-definitive-guide-to-windows.qmd
@@ -14,8 +14,12 @@ lightbox: auto
 draft: false
 format:
   html:
+    code-fold: false
+    code-tools: true
     code-line-numbers: true
-    highlight-style: arrow
+    #code-block-bg: true
+    #code-block-border-left: "#31BAE9"
+    highlight-style: kate
 ---
 
 ## TL; DR
@@ -34,7 +38,7 @@ winget으로 설치할 수 있는 소프트웨어 확인은 아래 웹 사이트
 
 <https://winget.run/>
 
-```
+```{filename="winget 설치 항목"}
 > winget install -e --id Microsoft.PowerToys # 키보드 리매핑
 > winget install -e --id Microsoft.PowerShell
 > winget install -e --id GitHub.GitHubDesktop
@@ -46,15 +50,16 @@ winget으로 설치할 수 있는 소프트웨어 확인은 아래 웹 사이트
 터미널 앱은 당연히 윈도 터미널을 써야 한다. 다른 OS의 터미널 앱과 비교해도 이 만큼 편리하고 다재다능한 앱이 없다. 최근 윈도11 버전에는 기본으로 탑재가 되어 있다. 몇 가지 팁만 짚고 넘어가자. 
 
 - Font는 Hack Nerd Font를 쓰자. [여기서](https://www.nerdfonts.com/font-downloads) 다운받자. 
-- 최근 버전에서는 `json`을 고치지 않고도 설정을 쉽게 바꿀 수 있다. 여기서 테마, 폰트 등을 바꾸면 된다. 
-- 셸 전체 설정과 개별 셸 설정 모두 가능하다. 
+- 최근 버전에서는 `settings.json` 파일 고치지 않고도 UI를 통해 쉽게 설정을 바꿀 수 있다. 여기서 테마, 폰트 등을 바꾸면 된다. 
+- 셸 공통 설정 뿐 아니라 개별 셸 설정도 세부적으로 지정할 수 있다. 
 
 ## WSL 
 
-윈도에서 개발 환경은 WSL을 쓰도록 하자. 네이티브 개발 환경도 어느 정도 까지는 나쁘지 않다. 하지만 아래와 같은 이유로 WSL을 쓰는 편이 낫다고 본다. 
+윈도에서 개발 환경은 WSL을 쓰도록 하자. 네이티브 개발 환경도 사실 상당히 괜찮다. 하지만 아래와 같은 이유로 WSL을 쓰는 편이 조금 낫다고 본다. 
 
-- 윈도의 레거시 요소(인코딩) 등이 방해하는 경우가 제법 있다.  
-- WSL이 원본에 가까운 리눅스 환경을 제공한다. 여전히 많은 개발 환경들이 리눅스 기반으로 개발된다. 좋은 리눅스 환경이 있는데 쓰지 않을 이유가 있을까? 
+- 윈도의 레거시 요소(인코딩) 등이 방해하는 경우가 없지 않더라.  
+- WSL이 원본에 접근한 리눅스 환경을 제공한다. 여전히 많은 개발 환경들이 리눅스를 기초로 제공된다. 좋은 리눅스 환경이 있는데 쓰지 않을 이유가 있을까? 
+- WSL은 리눅스의 GUI도 제공하고 있다. 만일 리눅스 GUI 환경이 필요하다면 윈도 내에서 그냥 쓰면 된다. 
 
 리눅스를 개발환경으로 쓴다고 해서 그 불편함까지 감수해야 하는 것은 아니다. 네이티브 환경의 UI/UX 및 필요한 앱들은 그대로 활용하면 된다. VS Code룰 통해 리눅스 환경에 원격 접속해 편리하게 코딩을 할 수 있고, 윈도 탐색기에서 리눅스 OS 안의 폴더로 접근할 수도 있다.
 
@@ -70,7 +75,7 @@ winget으로 설치할 수 있는 소프트웨어 확인은 아래 웹 사이트
 
 🔗 [WSL MS 공식 설치 가이드](https://learn.microsoft.com/en-us/windows/wsl/install)
 
-```shell
+```shell{filename="WSL 관련 명령어"}
 > wsl --list --online # or wsl -l -o 설치 가능한 배포판 조회 
 > wsl --install -d <Distribution Name> # 특정 배포판 설치 
 > wsl --unregister <Distribution Name> # 특정 배포판 삭제
