--- a/posts/walk-through/2023-11-03-definitive-guide-to-windows.qmd
+++ b/posts/walk-through/2023-11-03-definitive-guide-to-windows.qmd
@@ -15,7 +15,7 @@ draft: false
 format:
   html:
     code-fold: false
-    code-tools: true
+    #code-tools: true
     code-line-numbers: true
     #code-block-bg: true
     #code-block-border-left: "#31BAE9"
