--- a/posts/walk-through/2023-11-03-definitive-guide-to-windows.qmd
+++ b/posts/walk-through/2023-11-03-definitive-guide-to-windows.qmd
@@ -17,8 +17,8 @@ format:
     code-fold: false
     #code-tools: true
     code-line-numbers: true
-    #code-block-bg: true
-    #code-block-border-left: "#31BAE9"
+    code-block-bg: true
+    code-block-border-left: "#31BAE9"
     highlight-style: kate
 ---
 
