--- a/posts/computer-tool/2023-11-03-first-thing-ubuntu.qmd
+++ b/posts/computer-tool/2023-11-03-first-thing-ubuntu.qmd
@@ -15,7 +15,9 @@ draft: false
 format:
   html:
     code-line-numbers: true
-    highlight-style: arrow
+    code-block-bg: true
+    code-block-border-left: "#31BAE9"
+    highlight-style: github
 ---
 
 ## TL; DR
