--- a/posts/computer-tool/2023-11-03-first-thing-ubuntu.qmd
+++ b/posts/computer-tool/2023-11-03-first-thing-ubuntu.qmd
@@ -10,14 +10,14 @@ filters:
    - lightbox
    #- line-highlight
 lightbox: auto
-#jupyter: python3
+jupyter: python3
 draft: false
 format:
   html:
+    highlight-style: github
     code-line-numbers: true
     code-block-bg: true
     code-block-border-left: "#31BAE9"
-    highlight-style: github
 ---
 
 ## TL; DR
