--- a/posts/computer-tool/2023-11-03-first-thing-ubuntu.qmd
+++ b/posts/computer-tool/2023-11-03-first-thing-ubuntu.qmd
@@ -10,7 +10,7 @@ filters:
    - lightbox
    #- line-highlight
 lightbox: auto
-jupyter: python3
+#jupyter: python3
 draft: false
 format:
   html:
@@ -36,7 +36,7 @@ WSL이 생기면서 윈도에서도 리눅스를 제대로 쓸 수 있게 되었
 
 기본 리포지토리 주소를 바꾸도록 하자. 만일 WSL을 통해 설치했다면 우분투 메인 서버로 설정되어 있을 것이고, iso 이미지로 설치했다면, `kr`이 앞에 붙어 있다. apt 패키지 업데이트를 위한 주소는 `/etc/apt/sources.list` 파일을 직접 편집하면 된다. 
 
-```bash
+```zsh
 > sudo nano /etc/apt/sources.list
 ```
 
@@ -44,7 +44,7 @@ WSL이 생기면서 윈도에서도 리눅스를 제대로 쓸 수 있게 되었
 
 ## zsh 관련 설치 
 
-```bash
+```zsh
 > sudo apt update # 이미 실행했다면 건너 뛰자 
 > sudo apt install zsh # zsh 설치
 > chsh -s $(which zsh) # zsh을 기본 셸로 설정
@@ -55,13 +55,13 @@ WSL이 생기면서 윈도에서도 리눅스를 제대로 쓸 수 있게 되었
 
 ## powerlevel10k(p10k) 깔기 
 
-```bash
+```zsh
 > git clone --depth=1 https://github.com/romkatv/powerlevel10k.git ${ZSH_CUSTOM:-$HOME/.oh-my-zsh/custom}/themes/powerlevel10k
 ```
 
 셸 꾸미기로 속 편하게 파워레벨10k를 쓰자. 
 
-```bash
+```zsh
 > nano ~/.zshrc # zsh 설정 열기 
 # ZSH_THEME="robbyrussell" -> ZSH_THEME="powerlevel10k/powerlevel10k" # 테마를 p10k로 바꾸자 
 ```
@@ -80,7 +80,7 @@ WSL이 생기면서 윈도에서도 리눅스를 제대로 쓸 수 있게 되었
 
 이제 brew를 통해서 필요한 앱들을 깔겠다. 필요한 앱을 알아서 깔면 된다. brew를 통해서 설치할 수 있는지 여부는 brew 홈페이지에서 검색으로 확인할 수 있다. 나는 깃헙을 활용하기 위한 gh와 파이썬 의존성 관리도구인 pixi를 가장 먼저 설치했다. 
 
-```bash
+```zsh
 > brew install gh, pixi 
 ```
 
@@ -94,7 +94,7 @@ brew로 다 설치가 되면 좋겠지만 그렇지 않은 앱들도 있다. 아
 
 Miniforge는 패키지 관리 도구이자 독립적인 가상 환경을 제공하는 miniconda의 오픈소스 버전이다. Macos에서는 brew를 통해 설치되지만 아쉽게도 리눅스에서는 별도로 설치해야 한다. pixi를 쓴다면 다른 가상 환경은 필요하지 않다. 다만 다른 프로그램이 conda에 의존할 경우 필요할 수 있다. 
 
-```bash
+```zsh
 > curl -L -O "https://github.com/conda-forge/miniforge/releases/latest/download/Miniforge3-$(uname)-$(uname -m).sh"
 bash Miniforge3-$(uname)-$(uname -m).sh
 ```
@@ -111,7 +111,7 @@ bash Miniforge3-$(uname)-$(uname -m).sh
 
 `.deb` 확장자 파일을 다운받아서 gdebi 앱을 통해서 설치하는 방식이다. 
 
-```bash
+```zsh
 > sudo curl -LO https://quarto.org/download/latest/quarto-linux-amd64.deb #deb 다운로드 
 > sudo apt-get install gdebi-core
 > sudo gdebi quarto-linux-amd64.deb
@@ -121,7 +121,7 @@ bash Miniforge3-$(uname)-$(uname -m).sh
 
 Ubuntu 22.04 LTS와 VS Code + Mojo Extension을 활용한다고 가정하자. 
 
-```bash
+```zsh
 > curl https://get.modular.com | sh - && \
   modular auth mut_c4e7186420c84b86b1f7b5219b4028d9
 > modular install mojo
